--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -221,7 +221,7 @@
  patagonia:0 "パタゴニア"
  ohio:0 "オハイオ"
  amazonas_node:0 "アマゾナス"
- rio_grande:0 "リオグランデ"
+ rio_grande:0 "リオ・グランデ"
  the_moluccas:0 "モルッカ諸島"
  lima:0 "リマ"
  cuiaba:0 "クイアバ"
@@ -988,7 +988,7 @@
  CS_NEW_TITLE:0 "衛星国の建設"
  CS_NEW_CREATED:0 "$COUNTRY$を建国しました！"
  CS_EDIT_TITLE:0 "$COUNTRY$の編集"
- CS_NEW_DESC:0 "新しい衛星国を作成し、§Y$PROVINCE$§!を新しい首都として与えてもよろしいですか？"
+ CS_NEW_DESC:0 "新しい衛星国を作成し、§Y$PROVINCE$§!を新しい首都として与えますか？"
  CS_ADD_TO_STATE_TIP:0 "§Y$NAME$§!に州を追加する"
  CS_NEW_STATE_TIP:0 "新しい衛星国を建設します。"
  CS_NEW_STATE_TITLE:0 "新しい衛星国"
