--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -94,7 +94,7 @@
  MODIFIER_LOCAL_HEIR_DIPLOMATIC:0 "後継者の外交スキル"
  MODIFIER_LOCAL_HEIR_MILITARY:0 "後継者の軍事スキル"
  ABOUT_NOW_TXT:0 "現在の状況"
- ALREADY_REACHED_TOOLTIP:0 "§Y現在§!、次の改革を実行するのに十分です！"
+ ALREADY_REACHED_TOOLTIP:0 "§Y現在§!、次の改革を制定するのに十分です！"
  UNIT_IS_SHATTERED:0 "このユニットは損傷しています、回復するのを待ちましょう。"
  JANISSARY_LIMIT_RELIGION:0 "$PROVINCE$は$RELIGION$の州のため、イェニチェリはここでは召集できません。"
  JOIN_TRADE_LEAGUE_EFFECT:0 "§Y$WHO$§Wは我々の貿易同盟に参加します。\n"
@@ -465,7 +465,7 @@
  PROVOKE_REVOLT_DELAYED:0 "反乱は非常に予測不可能な事件だが、いくつかの抜本的な措置を講じることで、我々は反乱軍を今すぐ反乱に駆り立てることができる。しかしながら、これはより多くの人々が彼らに加わることを促すかもしれない。"
  PROVOKE_REVOLT_ALREADY_IN_REVOLT:0 "すでに反乱が進行中です。我々はまずそれに対処する必要があります。"
  PROVOKE_REVOLT_NO_RISK:0 "彼らの主張への支持は弱まっており、問題は数ヶ月で解決するでしょう。"
- PROVOKE_REVOLT_CONFIRM:1 "$NAME$を反乱を起こすよう扇動しますか？\n\n追加の$BONUS$の兵士が結果として彼らの大義に加わり、合計$SIZE|Y$連隊になります。"
+ PROVOKE_REVOLT_CONFIRM:1 "$NAME$に反乱を起こすよう扇動しますか？\n\n追加の$BONUS$の兵士が結果として彼らの大義に加わり、合計$SIZE|Y$連隊になります。"
  PROVOKE_REVOLT_AT_WAR:0 "戦争中に反乱を扇動することはできません。"
  PROVOKE_REVOLT_SIEGED_OR_OCCUPIED:0 "反乱軍の州が占領されているか、包囲されている場合、我々は反乱を扇動することはできません。"
  PROVOKE_REVOLT_BELOW_MIN_PROGRESS:0 "少なくとも$MIN|0Y%$まで進行した反乱のみ扇動することができます。今のところ$PROGRESS|0Y%$しか進行していません。"
@@ -727,7 +727,7 @@
  geteilte_macht_province:0 "権力の共有"
  BENEFIT_FOR_ELECTOR:0 "選帝侯が以下を得る：\n$MODIFIER$"
  IMPERIALREALMWARTITLE:0 "帝国戦争を宣言"
- IMPERIALREALMWARDESC:0 "$COUNTRY|Y$に対する帝国戦争を宣言しますか？これには$COST|Y$の帝国の権威が必要ですが、我々に5年間、$COUNTRY|Y$に対する開戦事由を与えます。この開戦事由は帝国全体の力を結集することを可能にします。"
+ IMPERIALREALMWARDESC:0 "$COUNTRY|Y$に対する帝国戦争を宣言しますか？これには帝国の権威が$COST|Y$必要ですが、我々に5年間、$COUNTRY|Y$に対する開戦事由を与えます。この開戦事由は帝国全体の力を結集することを可能にします。"
  REICHSKRIEG_WAR_NAME:0 "$SECOND_NAME$に対する$ORDER$$FIRST$帝国戦争"
  ALEADY_HAS_IMPERIAL_REALM_WAR_CB:0 "§R我々はすでに$TARGET|Y$に対して帝国戦争を宣言しています§!"
  HINT_ZONEOFCONTROL_TITLE:0 "ZOC"
@@ -933,7 +933,7 @@
  RAISEWARTAXESSTOPPED_SETUP:0 "戦争税のコストにもはや余裕がなくなったとき"
  RAISEWARTAXESSTOPPED_1:0 "戦争税の徴収の停止"
  RAISEWARTAXESSTOPPED_2:0 "軍事点が不足しているため、我々は戦争のための戦争税の徴収を停止しなければなりませんでした。"
- RAISEWARTAXESSTOPPED_LOG:0 "軍事点の不足により、我々の戦争のための戦争税の徴収を停止しなければならなかった"
+ RAISEWARTAXESSTOPPED_LOG:0 "軍事点の不足により、戦争税の徴収が停止に追い込まれる"
  RAISEWARTAXESSTOPPED_BTN1:0 "OK"
  estate_church_ownership:0 "[Country.Get聖職者Name]階級の土地所有権"
  estate_brahmins_ownership:0 "[Country.GetBrahminsName]階級の土地所有権"
