--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -4432,10 +4432,10 @@
  EVTOPTB3079:1 "彼らが必要なものすべてを与えよう！"
  colonial.1.d:0 "我が国は、我々のライバルの誰もまだ主張していない領土に囲まれている。王家に属する土地を拡大するという我々の野望は、人々の中で民族主義的な熱意へと広がっており、新しい民間会社は[Root.GetName]にその地位を確立し、栄光と黄金、[Root.Owner.Monarch.GetTitle][Root.Owner.Monarch.GetName]、および[empty_neighbor_target.GetAreaName]会社のための領土を主張するため、[empty_neighbor_target.GetName]の土地に新しい入植者を連れて行くという野望を抱いている。我々が拡張を許可すれば、彼らは多くの入植者を州に引き入れ、その地域の[Root.Owner.GetAdjective]の影響力は急速に拡大するだろう。"
  colonial.1.c:0 "彼らの熱意を利用して、代わりに[Root.GetName]でベビーブームを起こしてくれ。"
- ideagroups.1922.t:0 "A Moving City"
+ ideagroups.1922.t:0 "動く都市"
  ideagroups.1922.d:0 "There are ancient tales of moving palaces crumbling down to the ground in the desert's sands. Fragile and shifting mirages have come and gone, disappeared as the names of the men who had lived and died in their secret chambers. But all legends are born from a shady truth, the echo of what has passed.\nWe are those moving palaces, those disappearing dwellers. Our cities are not built in stone, but on bones."
  ideagroups.1922.a:0 "We will not remain a mirage."
- a_moving_city:0 "A Moving City"
+ a_moving_city:0 "動く都市"
  desc_a_moving_city:0 "Our mobile caravans have granted us a good reputation in trading."
  ideagroups.1923.t:0 "Ancestral Temple"
  ideagroups.1923.d:1 "One of our hosts got lost during a hunting expedition and they have discovered an abandoned shrine in the depths of our land. Perfect faith must be impenetrable, rigid stones drowned in nature's last blow, but still trying to get some air. Remnants of times long past under a faint distillation of light, its understructure strong as tamed horses. Our soldiers struck by its perfect obscurity, a cold day, a long day, a faithful day.\nThey couldn't scream, for the supremacy of that temple made them go silent with reverence."
@@ -4556,9 +4556,9 @@
  ideagroups.1937.a:0 "もっと慎重になるべきだ。"
  overconfidence:0 "自信過剰"
  desc_overconfidence:1 "戦士たちの士気は敵に真正面から突撃するほどに高いが、これは諸刃の剣である。"
- ideagroups.1938.t:0 "Uncontrolled Fire"
- ideagroups.1938.d:1 "Our people burn the land periodically to call the spirits of the land back so they can bring the land to life again after we have used it extensively. This is a very traditional thing that usually goes well. This time, however, the fire has been unattended and has grown to the point that it is not controllable anymore. Instead of bringing wealth back, it looks like it will take it from us."
- ideagroups.1938.a:0 "What have we done?!."
+ ideagroups.1938.t:0 "制御を失った炎"
+ ideagroups.1938.d:1 "広範囲の土地を定期的に焼くことで大地の魂を呼び戻し、土地を再び蘇すことができます。これは伝統的な手法であり、本来はうまくはずでした。しかしながら、目の前の炎は人の手を離れ、制御が失って燃え広がってしまいました。まるで自然の恵みを蘇らせる代わりに我々の富を奪い去るかのように。"
+ ideagroups.1938.a:0 "なんてことをしてしまったのだ？！"
  ideagroups.1939.t:0 "Dancing on The Knife"
  ideagroups.1939.d:1 "Being in contact with our neighbours brings us new ideas and products, but it also shows us how different we are from them. You know how to treat your tribe, but you do not know how to treat foreigners. Will they like our traditions? Our words? Our aspect?"
  ideagroups.1939.a:0 "How will this end?"
