--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -535,8 +535,8 @@
  PROV_ADJ4665:1 "西ブトハ"
  PROV4666:1 "バルガ"
  PROV_ADJ4666:1 "バルガ"
- PROV4667:1 "バヤンウール"
- PROV_ADJ4667:1 "バヤンウール"
+ PROV4667:1 "バヤン＝ウール"
+ PROV_ADJ4667:1 "バヤン＝ウール"
  PROV4668:1 "オルホン"
  PROV_ADJ4668:1 "オルホン"
  PROV4669:1 "サインシャンド"
@@ -553,12 +553,12 @@
  PROV_ADJ4674:1 "ホルチン"
  PROV4675:1 "バイシントゥ"
  PROV_ADJ4675:1 "バイシントゥ"
- PROV4676:1 "バダインジャラン"
- PROV_ADJ4676:1 "バダインジャラン"
+ PROV4676:1 "バダイン・ジャラン"
+ PROV_ADJ4676:1 "バダイン・ジャラン"
  PROV4677:1 "ノヨン"
  PROV_ADJ4677:1 "ノヨン"
- PROV4678:1 "サインノヨン"
- PROV_ADJ4678:1 "サインノヨン"
+ PROV4678:1 "サイン・ノヨン"
+ PROV_ADJ4678:1 "サイン・ノヨン"
  PROV4679:1 "フブスグル"
  PROV_ADJ4679:1 "フブスグル"
  PROV4680:1 "ザハチン"
