--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -79,7 +79,7 @@
  SPYCOST:0 "我が国の$ADJ|Y$諜報網の大きさを$COST$減らします。"
  STEALMAPDESC:0 "地方の地図を標的から盗む"
  STEALMAP_OFFDESC:0 "$RECIPIENT_ADJ$の地図を盗むことで、$ACTOR$は$COST$の諜報網コストで、$REGION$地域の知識を得て、$NUM_PROVS|Y$州を発見します。"
- SHAREMAPTITLE:0 "地図の共有の要求"
+ SHAREMAPTITLE:0 "地図の共有を要求する"
  SHAREMAP_REQDESC:0 "$ACTOR$は$REGION$の知識の共有を望んでいます。受け入れることで、彼らは$NUM_PROVS|Y$州を発見し、我々に$PRESTIGE$の威信を与えるでしょう。"
  SHAREMAP_OFFDESC:0 "$REGION$の知識を共有するよう要請し、もし彼らが受け入れれば、我々は$NUM_PROVS|Y$州を発見するでしょう。さらに、我々は威信を$LOSE$失いますが、彼らは威信を$GAIN$得ます。"
  SHAREMAP_NO_UNITS:0 "我々はこの地域近隣にユニットを持っていません。"
@@ -89,7 +89,7 @@
  SHAREMAP_ENEMY:0 "彼らは我々をライバルとみなしており、地図の共有をすることはないでしょう。"
  UNCONDITIONALSURRENDERTITLE:0 "無条件降伏"
  UNCONDITIONALSURRENDERDESC:1 "彼らに§Y無条件降伏§!することで、彼らに我々に対する和平を提案するため$MONTHS$ヶ月を与えます。"
- UNCONDITIONALSURRENDERREQDESC:1 "無条件降伏してもよろしいですか？$COUNTRY$は自動的に受け入れる和平提案を我々に送るための$MONTHS|Y$ヶ月を持つでしょう。もし彼らがそれを送らなければ、彼らの国で平和を求め、ますます厳しい声が上がるでしょう。\n\n我々の故郷にいる我々の軍隊は追放され、我々がこれを行うことで保護されます。\n\n現在、我々が領有・支配している州の支配権はすべて敵に移管されます。"
+ UNCONDITIONALSURRENDERREQDESC:1 "無条件降伏しますか？$COUNTRY$は$MONTHS|Y$ヶ月の間に和平提案を送ってきますが、これは自動的に受け入れられます。もし彼らが送らなければ、彼らの国で平和を求め、ますます厳しい声が上がるでしょう。\n\n本土にいる陸軍は流浪状態になるので、これを行うと保護されます。\n\n現在、我々が領有・支配している州の支配権はすべて敵に移管されます。"
  WEUNCONDITIONALLYSURRENDERED:1 "我々は§Y無条件降伏§!し、そして彼らの返答を待っています。"
  THEYUNCONDITIONALLYSURRENDERED:1 "$COUNTRY$は我々に§Y無条件降伏§!した。彼らに和平の条件を提示しなければならない。"
  WEUNCONDITIONALLYSURRENDEREDOTHER:1 "我々は第三国に§Y無条件降伏§!しています。"
