--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -105,17 +105,17 @@
  NEW_LEADER_ON_DEATH:0 "$LEADER|Y$の君主が死んだ時、連邦の権威が一番高い国が新しい指導者となる。現在それは連邦の権威を$VAL|Y0$持つ$NEWLEADER|Y$である。"
  FEDERAL_AUTHORITY:0 "連邦の権威：$VAL|+2$"
  REQUEST_TO_JOIN_FEDERATIONTITLE:0 "連邦への参加を要求"
- REQUEST_TO_JOIN_FEDERATIONDESC:0 "あなたが連邦に参加できるかどうか$ACTOR$に尋ねますか？"
+ REQUEST_TO_JOIN_FEDERATIONDESC:0 "連邦に加盟できるかどうか$ACTOR$に尋ねますか？"
  REQUEST_TO_JOIN_FEDERATIONREQDESC:0 "$ACTOR$は我々が連邦に参加することを要求しています。この要求を受け入れますか？"
  INVITE_TO_FEDERATIONTITLE:0 "連邦へ招待"
- INVITE_TO_FEDERATIONDESC:0 "彼らが我々の連邦に参加する意思があるか、$ACTOR$に尋ねますか？"
+ INVITE_TO_FEDERATIONDESC:0 "彼らが我々の連邦に加盟するかどうか$ACTOR$に尋ねますか？"
  INVITE_TO_FEDERATIONREQDESC:1 "$ACTOR$は「$FEDERATIONNAME$」の連邦に加わるように我々に要求しています。我々は参加を望みますか？"
  JOIN_FEDERATION:0 "連邦に参加"
- JOIN_FEDERATION_REQ_DESC:0 "$LEADER$の連邦に参加したいですか？"
+ JOIN_FEDERATION_REQ_DESC:0 "$LEADER$の連邦に加盟しますか？"
  JOIN_FEDERATION_DESC:0 "連邦に参加"
  JOIN_FEDERATION_TITLE:0 "連邦に参加"
  INVITE_TO_FEDERATION:0 "連邦に招待"
- INVITE_TO_FEDERATION_REQ_DESC:0 "連邦に$COUNTRY$を招待したいですか？"
+ INVITE_TO_FEDERATION_REQ_DESC:0 "連邦に$COUNTRY$を招待しますか？"
  INVITE_TO_FEDERATION_DESC:0 "連邦に招待"
  INVITE_TO_FEDERATION_TITLE:0 "連邦に招待"
  REQUESTTOJOINFEDERATIONTITLE:0 "連邦に参加"
@@ -176,7 +176,7 @@
  NEWCOLONIALCOUNTRY_4:0 "$REGION$にある$COUNTRY$領土"
  NEWCOLONIALCOUNTRY_5:0 "新国家は母国から独立した領土ですが、遠い将来、管理に失敗した際には自由を奪われるかもしれません。"
  NEWCOLONIALCOUNTRY_6:0 ""
- NEWCOLONIALCOUNTRY_LOG:0 "$NAME$が$REGION$で形成された"
+ NEWCOLONIALCOUNTRY_LOG:0 "$NAME$、$REGION$で形成"
  NEWCOLONIALCOUNTRY_BTN1:0 "OK"
  NEWCOLONIALCOUNTRY_BTN2:0 "OK"
  NEWCOLONIALCOUNTRY_BTN3:0 "移動"
@@ -218,7 +218,7 @@
  RELEASEDCOLONY_4:0 "$REGION$にある$COUNTRY$"
  RELEASEDCOLONY_5:0 "この新国家は完全に独立状態にあります。"
  RELEASEDCOLONY_6:0 ""
- RELEASEDCOLONY_LOG:0 "$NAME$が$REGION$で解放された"
+ RELEASEDCOLONY_LOG:0 "$REGION$の$NAME$、解放"
  RELEASEDCOLONY_BTN1:0 "OK"
  RELEASEDCOLONY_BTN2:0 "OK"
  RELEASEDCOLONY_BTN3:0 "移動"
