--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -580,7 +580,7 @@
  PROV_ADJ589:0 "チェンマイ"
  PROV_ADJ591:0 "タヴォイ"
  PROV_ADJ592:0 "ラーチャブリー"
- PROV_ADJ593:0 "ナコンシータマラート"
+ PROV_ADJ593:0 "ナコン・シー・タマラート"
  PROV_ADJ594:0 "パッターニー"
  PROV_ADJ595:0 "ペラ"
  PROV_ADJ596:0 "マラッカ"
@@ -590,14 +590,14 @@
  PROV_ADJ600:0 "アユタヤ"
  PROV_ADJ601:0 "スコータイ"
  PROV_ADJ602:0 "チェンライ"
- PROV_ADJ603:0 "ナコーントゥンヤイ"
+ PROV_ADJ603:0 "ナコーン・トゥン・ヤイ"
  PROV_ADJ604:0 "ウドン"
  PROV_ADJ605:0 "プレイノコール"
  PROV_ADJ606:0 "パンドゥランガ"
  PROV_ADJ607:0 "ヴィジャヤ"
  PROV_ADJ608:1 "アッタプー"
  PROV_ADJ609:0 "アンコール"
- PROV_ADJ610:0 "タインホア"
+ PROV_ADJ610:0 "タイン・ホア"
  PROV_ADJ611:0 "シッホタボン"
  PROV_ADJ612:0 "コラート"
  PROV_ADJ613:0 "トンキン"
@@ -740,7 +740,7 @@
  PROV_ADJ750:0 "クラト"
  PROV_ADJ751:0 "セアラー"
  PROV_ADJ752:0 "オエイラス"
- PROV_ADJ753:0 "リオグランデ"
+ PROV_ADJ753:0 "リオ・グランデ"
  PROV_ADJ754:0 "パライバ"
  PROV_ADJ755:0 "ペルナンブーコ"
  PROV_ADJ756:0 "バイーア"
@@ -2695,12 +2695,12 @@
  PROV_ADJ2715:0 "ポロポ"
  PROV_ADJ2716:0 "ブトゥン"
  PROV_ADJ2717:0 "スラ"
- PROV_ADJ2718:0 "ファク・ファク"
+ PROV_ADJ2718:0 "ファク＝ファク"
  PROV_ADJ2719:0 "マダン"
  PROV_ADJ2720:0 "ラエ"
  PROV_ADJ2721:0 "ケレマ"
  PROV_ADJ2722:0 "ダル"
- PROV_ADJ2723:0 "ヨススダルソ"
+ PROV_ADJ2723:0 "ヨス・スダルソ"
  PROV_ADJ2724:0 "アスマット"
  PROV_ADJ2725:0 "アルー"
  PROV_ADJ2726:0 "マルガナ"
@@ -2766,7 +2766,7 @@
  PROV_ADJ2786:0 "ボサソ"
  PROV_ADJ2787:0 "ハマシエン"
  PROV_ADJ2788:0 "ハフン"
- PROV_ADJ2789:0 "ラスコレー"
+ PROV_ADJ2789:0 "ラス・コレー"
  PROV_ADJ2790:0 "サナアグ"
  PROV_ADJ2791:0 "アンコーベル"
  PROV_ADJ2792:0 "トゲアー"
@@ -2825,7 +2825,7 @@
  PROV_ADJ2845:0 "サンフアン"
  PROV_ADJ2846:0 "キスキサカテ"
  PROV_ADJ2847:0 "サンルイス"
- PROV_ADJ2848:0 "サンタフェ"
+ PROV_ADJ2848:0 "サンタ・フェ"
  PROV_ADJ2849:0 "ロサリオ"
  PROV_ADJ2850:0 "モンテビデオ"
  PROV_ADJ2851:0 "コロニア"
@@ -2834,7 +2834,7 @@
  PROV_ADJ2854:0 "中央チャコ"
  PROV_ADJ2855:0 "ミシオネス"
  PROV_ADJ2856:0 "高地草原"
- PROV_ADJ2857:0 "リオグランデ・ド・スル"
+ PROV_ADJ2857:0 "リオ・グランデ・ド・スル"
  PROV_ADJ2858:0 "サンティアゴ"
  PROV_ADJ2859:0 "イタプア"
  PROV_ADJ2860:0 "ケランディ"
@@ -2856,7 +2856,7 @@
  PROV_ADJ2876:0 "テウス"
  PROV_ADJ2877:0 "メンドーサ"
  PROV_ADJ2878:0 "マタラ"
- PROV_ADJ2879:0 "サンタテクラ"
+ PROV_ADJ2879:0 "サンタ・テクラ"
  PROV_ADJ2880:0 "グリカランド"
  PROV_ADJ2881:0 "コルンバ"
  PROV_ADJ2882:0 "フエルテ・ボルボン"
@@ -2864,9 +2864,9 @@
  PROV_ADJ2884:0 "パボス・ダス・ミショエス"
  PROV_ADJ2885:0 "バラ"
  PROV_ADJ2886:0 "パルナイバ"
- PROV_ADJ2887:0 "サンタカタリーナ"
+ PROV_ADJ2887:0 "サンタ・カタリーナ"
  PROV_ADJ2888:0 "クイアバ"
- PROV_ADJ2889:0 "リオブランコ"
+ PROV_ADJ2889:0 "リオ・ブランコ"
  PROV_ADJ2890:0 "マラジョ"
  PROV_ADJ2891:0 "サントアントニオ・ダ・マンガ"
  PROV_ADJ2892:0 "アラシャス"
