--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -560,17 +560,17 @@
  PROV579:0 "ミャウウー"
  PROV580:0 "カレ"
  PROV581:0 "サガイン"
- PROV582:0 "モンヤン"
+ PROV582:0 "モン・ヤン"
  PROV583:0 "センウィー"
  PROV584:0 "アヴァ"
  PROV585:0 "タウングー"
  PROV586:0 "ペグー"
  PROV587:0 "ケントゥン"
  PROV588:0 "モンナイ"
- PROV589:0 "チェンマイ"
+ PROV589:0 "チェン・マイ"
  PROV591:0 "タヴォイ"
  PROV592:0 "ラーチャブリー"
- PROV593:0 "ナコンシータマラート"
+ PROV593:0 "ナコン・シー・タマラート"
  PROV594:0 "パッターニー"
  PROV595:0 "ペラ"
  PROV596:0 "マラッカ"
@@ -579,15 +579,15 @@
  PROV599:0 "クランタン"
  PROV600:0 "アユタヤ"
  PROV601:0 "スコータイ"
- PROV602:0 "チェンライ"
- PROV603:0 "ナコーントゥンヤイ"
+ PROV602:0 "チェン・ライ"
+ PROV603:0 "ナコーン・トゥン・ヤイ"
  PROV604:0 "ウドン"
- PROV605:0 "プレイノコール"
+ PROV605:0 "プレイ・ノコール"
  PROV606:0 "パンドゥランガ"
  PROV607:0 "ヴィジャヤ"
  PROV608:1 "アッタプー"
  PROV609:0 "アンコール"
- PROV610:0 "タインホア"
+ PROV610:0 "タイン・ホア"
  PROV611:0 "シッホタボン"
  PROV612:0 "コラート"
  PROV613:0 "トンキン"
@@ -730,7 +730,7 @@
  PROV750:0 "クラト"
  PROV751:0 "セアラー"
  PROV752:0 "オエイラス"
- PROV753:0 "リオグランデ"
+ PROV753:0 "リオ・グランデ"
  PROV754:0 "パライバ"
  PROV755:0 "ペルナンブーコ"
  PROV756:0 "バイーア"
@@ -740,7 +740,7 @@
  PROV760:0 "ポルト・セグーロ"
  PROV761:0 "エスピリトサント"
  PROV762:0 "サントメ"
- PROV763:0 "リオデジャネイロ"
+ PROV763:0 "リオ・デ・ジャネイロ"
  PROV764:0 "サント・アマロ"
  PROV765:0 "ミナスジェライス"
  PROV766:0 "サン・ヴィセンテ"
@@ -871,7 +871,7 @@
  PROV892:1 "キットキティシュ"
  PROV893:0 "チティマシャ"
  PROV894:1 "Kadohadacho"
- PROV895:1 "Anilco"
+ PROV895:1 "アニルコ"
  PROV896:0 "イスカニ"
  PROV897:1 "キャスキ"
  PROV898:1 "カンザ"
@@ -885,7 +885,7 @@
  PROV906:1 "ヤンクトナイ"
  PROV907:1 "ヤンクトンワン"
  PROV908:1 "シスストンワン"
- PROV909:1 "Nueta"
+ PROV909:1 "ヌエータ"
  PROV910:0 "マクア"
  PROV911:1 "Baawitigon"
  PROV912:1 "Osaakiiwaki"
@@ -939,13 +939,13 @@
  PROV960:1 "オノンダガオノ"
  PROV961:1 "オンヨーターカ"
  PROV962:0 "ウナミ"
- PROV963:1 "Machkantowoon"
+ PROV963:1 "マチカントウーン"
  PROV964:1 "カニエンケハカ"
  PROV965:1 "マナハッタン"
  PROV966:0 "ニプマク"
  PROV967:0 "ナラガンセット"
  PROV968:1 "マサチューセッツ"
- PROV969:1 "Mahican"
+ PROV969:1 "マヒカン"
  PROV970:1 "Amoskeag"
  PROV971:1 "Penapawsket"
  PROV972:1 "ヌーチャーヌルス"
@@ -958,8 +958,8 @@
  PROV979:1 "ウナンガン"
  PROV980:0 "ベオサック"
  PROV981:0 "タカンクク"
- PROV982:1 "Onamagag"
- PROV983:1 "Epagoitgnag"
+ PROV982:1 "オナマガグ"
+ PROV983:1 "エパゴイットナーグ"
  PROV984:1 "Segepenegatic"
  PROV985:1 "Petkootkweak"
  PROV986:1 "Gespegeogag"
@@ -972,11 +972,11 @@
  PROV993:1 "オシアガ"
  PROV994:0 "スタダコナ"
  PROV995:1 "Toutouskak"
- PROV996:1 "Oumamiwek"
+ PROV996:1 "オウマミウェ"
  PROV997:0 "チゼック"
  PROV998:0 "チキリュート"
  PROV999:0 "シサシピ"
- PROV1000:1 "Iyiyiw"
+ PROV1000:1 "イイウ"
  PROV1001:1 "Marameg"
  PROV1002:0 "アビティビ"
  PROV1003:0 "モソニ"
@@ -1568,7 +1568,7 @@
  PROV1589:0 "ブラジル＝マルビナス合流帯"
  PROV1590:0 "南ブラジル海流"
  PROV1591:0 "ブラジル海流"
- PROV1592:1 "リオグランデ海膨"
+ PROV1592:1 "リオ・グランデ海膨"
  PROV1593:1 "アルゼンチン海盆"
  PROV1594:1 "サウス・オークニー諸島"
  PROV1595:0 "東マゼラン海峡"
@@ -1984,7 +1984,7 @@
  PROV2008:1 "Sihasapa"
  PROV2009:0 "オグララ"
  PROV2010:1 "ピクォート"
- PROV2011:1 "Senedo"
+ PROV2011:1 "セネド"
  PROV2012:1 "Ersegonteog"
  PROV2013:1 "Allesikantekw"
  PROV2014:0 "ナキトシュ"
@@ -2501,7 +2501,7 @@
  PROV2535:0 "カルーサ"
  PROV2536:0 "マヤイミ"
  PROV2537:1 "イチシ"
- PROV2538:1 "Ocute"
+ PROV2538:1 "オキュート"
  PROV2539:0 "モカマ"
  PROV2540:1 "エトワ"
  PROV2541:2 "サルーダ"
@@ -2525,14 +2525,14 @@
  PROV2559:1 "Tekontaroken"
  PROV2560:1 "Quiripi"
  PROV2561:0 "ワンパノアグ"
- PROV2562:1 "Penakuk"
+ PROV2562:1 "ペナクック"
  PROV2563:1 "ミシアシク"
  PROV2564:0 "ソコキ"
  PROV2565:1 "Kinnipekw"
  PROV2566:1 "Peskotomuhkati"
  PROV2567:1 "Tobique"
- PROV2568:1 "Gespogoitnag"
- PROV2569:1 "Eskikeogag"
+ PROV2568:1 "ゲスポゴイトナグ"
+ PROV2569:1 "エスキケオガグ"
  PROV2570:1 "Wolastoqiyik"
  PROV2571:0 "マダワスカ"
  PROV2572:1 "Sigenigteogag"
@@ -2542,7 +2542,7 @@
  PROV2576:1 "Ekuanitshu"
  PROV2577:1 "Pessamu"
  PROV2578:1 "Notiskuan"
- PROV2579:1 "Pekuakamiulnuatsh"
+ PROV2579:1 "ペクアカミウルヌアトシュ"
  PROV2580:0 "アティカメク"
  PROV2581:0 "ティミスカミング"
  PROV2582:1 "Animouski"
@@ -2555,14 +2555,14 @@
  PROV2589:0 "ケサガミ"
  PROV2590:0 "シャガミ"
  PROV2591:0 "オートリブ"
- PROV2592:1 "Maskekowak"
+ PROV2592:1 "マスケコワク"
  PROV2593:0 "ワップス"
  PROV2594:1 "Quennebigonhelini"
  PROV2595:1 "Kes-ye-hot'inne"
  PROV2596:0 "マヒミキンイヤク"
  PROV2597:0 "シピウィニニワク"
  PROV2598:1 "Ye Xa Yabine"
- PROV2599:1 "Ayabaskawiiniwak"
+ PROV2599:1 "アヤバスカウィーニワク"
  PROV2600:0 "ニヒタワク"
  PROV2601:1 "Dane-zaa"
  PROV2602:0 "シクシカワ"
@@ -2679,12 +2679,12 @@
  PROV2715:0 "ポロポ"
  PROV2716:0 "ブトゥン"
  PROV2717:0 "スラ"
- PROV2718:0 "ファク・ファク"
+ PROV2718:0 "ファク＝ファク"
  PROV2719:0 "マダン"
  PROV2720:0 "ラエ"
  PROV2721:0 "ケレマ"
  PROV2722:0 "ダル"
- PROV2723:0 "ヨススダルソ"
+ PROV2723:0 "ヨス・スダルソ"
  PROV2724:0 "アスマット"
  PROV2725:0 "アルー"
  PROV2726:0 "マルガナ"
@@ -2750,7 +2750,7 @@
  PROV2786:0 "ボサソ"
  PROV2787:0 "ハマシエン"
  PROV2788:0 "ハフン"
- PROV2789:0 "ラスコレー"
+ PROV2789:0 "ラス・コレー"
  PROV2790:0 "サナアグ"
  PROV2791:0 "アンコーベル"
  PROV2792:0 "トゲアー"
@@ -2795,7 +2795,7 @@
  PROV2831:0 "ティアワナコ"
  PROV2832:0 "サンホアキン"
  PROV2833:0 "マドレ・デ・ディオス"
- PROV2834:0 "サンタクルス・デ・ラ・シエラ"
+ PROV2834:0 "サンタ・クルス・デ・ラ・シエラ"
  PROV2835:0 "スクレ"
  PROV2836:0 "トゥクマン"
  PROV2837:0 "サンタ・カタリーナ"
@@ -2809,7 +2809,7 @@
  PROV2845:0 "サンフアン"
  PROV2846:0 "キスキサカテ"
  PROV2847:0 "サンルイス"
- PROV2848:0 "サンタフェ"
+ PROV2848:0 "サンタ・フェ"
  PROV2849:0 "ロサリオ"
  PROV2850:0 "モンテビデオ"
  PROV2851:0 "コロニア"
@@ -2818,7 +2818,7 @@
  PROV2854:0 "中央チャコ"
  PROV2855:0 "ミシオネス"
  PROV2856:0 "高地草原"
- PROV2857:0 "リオグランデ・ド・スル"
+ PROV2857:0 "リオ・グランデ・ド・スル"
  PROV2858:0 "サンティアゴ"
  PROV2859:0 "イタプア"
  PROV2860:0 "ケランディ"
@@ -2840,7 +2840,7 @@
  PROV2876:0 "テウス"
  PROV2877:0 "メンドーサ"
  PROV2878:0 "マタラ"
- PROV2879:0 "サンタテクラ"
+ PROV2879:0 "サンタ・テクラ"
  PROV2880:0 "グリカランド"
  PROV2881:0 "コルンバ"
  PROV2882:0 "フエルテ・ボルボン"
@@ -2848,9 +2848,9 @@
  PROV2884:0 "パボス・ダス・ミショエス"
  PROV2885:0 "バラ"
  PROV2886:0 "パルナイバ"
- PROV2887:0 "サンタカタリーナ"
+ PROV2887:0 "サンタ・カタリーナ"
  PROV2888:0 "クイアバ"
- PROV2889:0 "リオブランコ"
+ PROV2889:0 "リオ・ブランコ"
  PROV2890:0 "マラジョ"
  PROV2891:0 "サントアントニオ・ダ・マンガ"
  PROV2892:0 "アラシャス"
@@ -2877,7 +2877,7 @@
  PROV2913:0 "ジェレモアボ"
  PROV2914:0 "イニャンブペ"
  PROV2915:0 "パンブ"
- PROV2916:0 "リオ・デ・コンタス"
+ PROV2916:0 "リオ・コンタス"
  PROV2917:0 "パラチンガ"
  PROV2918:0 "カンポ・ラルゴ"
  PROV2919:0 "ルシアーナ"
@@ -3074,7 +3074,7 @@
  PROV4126:0 "バーチ"
  PROV4127:0 "トゥルダ"
  PROV4128:0 "キラーイフェルド"
- PROV4129:0 "ウスチ・ヴィミ"
+ PROV4129:0 "ウスチ＝ヴィミ"
  PROV4130:0 "サマセット"
  PROV4131:0 "陸奥"
  PROV4132:0 "ムウェル湖"
@@ -3210,7 +3210,7 @@
  PROV4262:0 "トチマ"
  PROV4263:0 "ソリ・ガーリツカヤ"
  PROV4264:0 "テチューシ"
- PROV4265:0 "ヤール・チャル"
+ PROV4265:0 "ヤール＝チャル"
  PROV4266:0 "イジカル"
  PROV4267:0 "ボルガル"
  PROV4268:0 "アカバ"
