--- a/source/localisation/rights_of_man_l_english.yml
+++ b/source/localisation/rights_of_man_l_english.yml
@@ -109,7 +109,7 @@
  BLESSINGS_EXPLAIN:0 "自国が選ぶことのできる祝福の数は、自国の宗教を国教としている国が保持し且つ、国教と同じ宗教の聖地の数に応じる。"
  M_BLESSINGS_AND_HOLY_SITES:0 "祝福と聖地"
  CONFIRM_PICK_BLESSING_TITLE:0 "選択した祝福を確認"
- CONFIRM_PICK_BLESSING_DESC:0 "$NAME|Y$を私たちの好まれた祝福の中に追加しますか？これは後から取りやめることはできません。"
+ CONFIRM_PICK_BLESSING_DESC:0 "$NAME|Y$を好みの祝福に追加しますか？これは後から取り消すことはできません。"
  HOLY_SITES:0 "聖地"
  PICK_BLESSING:0 "祝福を選択"
  PATRIARCHAL_BLESSINGS:0 "総主教による祝福"
@@ -1138,7 +1138,7 @@
  artisan_of_gold:0 "金職人"
  desc_artisan_of_gold:0 "有名な金細工とトーテムの職人がここに暮らしている。"
  TRADING_CITY_NEW_TITLE:0 "新たな交易都市の作成"
- TRADING_CITY_NEW_DESC:0 "新しい交易都市を作り、それらの首都として§Y$PROVINCE$§!を与えますか？"
+ TRADING_CITY_NEW_DESC:0 "新しい交易都市を作り、§Y$PROVINCE$§!を新しい首都として与えますか？"
  rr_girondists:0 "ジロンド派"
  rr_girondists_influence:0 "ジロンド派の影響"
  rr_girondists_FACTION_DESC:0 "ジロンド派は革命が国内で制御不能にならないように、国外で革命を広げることを望んでいる。彼らは積極的外交政策で大陸の反革命的体制を終わらせられることを信じているのだ。"
