--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -599,7 +599,7 @@
  COMBAT_CROSSING:0 "渡河や上陸はダイス目に影響を与えます。"
  DISBAND_UNIT:0 "§Yユニットを解散する§!"
  DISBAND_UNIT_CANT:0 "敵の領土内や、敵軍と隣接しているユニットを解散することはできません。"
- DISBAND_UNIT_CONDOTTIERI:0 "コンドッティエーリは解散できません。"
+ DISBAND_UNIT_CONDOTTIERI:0 "コンドッティエーリを解散することはできません。"
  DISBAND_UNIT_DRO:1 "陸軍を解散すると、維持に費やされる金額が減少します。\nユニットの強さが非常に低い場合、解散し、より重要な領域のユニットを補充するために人的資源を利用した方が良いでしょう。"
  DISBAND_UNIT_RETURN_MANPOWER:0 "$NUMBER|Y$人の兵士は人的資源へ戻ります。傭兵は戻りません。"
  DISBAND_NAVY_DRO:0 "艦隊を解体すると、消費される維持費が減少します。\nユニットの強さが非常に低い場合は、それを解散し、船員資源を使用してより重要な領域の艦隊を補強することができます。\n艦隊を解散する時、船員は船員資源に戻されます。"
@@ -1005,7 +1005,7 @@
  BUILDPRICE:0 "この建物を建設する余裕がありません、建設には$PRICE$¤がかかります。"
  MYRELIGION:0 "我々は$RELIGION$です。"
  IDEATITLE:0 "国家アイデアを変更します。"
- IDEADESCNEW:0 "$IDEA$のアイデアを採用してよろしいですか？"
+ IDEADESCNEW:0 "$IDEA$のアイデアを採用しますか？"
  NOIDEA:0 "現在このスロットにアイデアが選択されていません。"
  NOTECH_MORE_ADVANCED:0 "我々の政府レベルが§Y$NEWLEVEL$§Wに達すると新しいスロットが開きます。我々の現在のレベルは§Y$LEVEL$§Wです。"
  COTNOTECH:0 "我々は商人を派遣するだけの発展をしていません。"
@@ -1017,7 +1017,7 @@
  COTCOMPETE:0 "我々はここでは太刀打ちできません。"
  COT_TOOLTIP_MONOPOLY:0 "§Y$COUNTRY$§Wは独占状態です。"
  COT_TOOLTIPSHARE:0 "あなたの取り分は§Y$SHARE$§W¤です。"
- FOGDESCCHANGE:0 "我が国の政府を$OLDIDEA$から$NEWIDEA$へ変更してもよろしいですか？"
+ FOGDESCCHANGE:0 "政府を$OLDIDEA$から$NEWIDEA$へ変更しますか？"
  FOGLEGPENALTY:0 "これはあなたの正統性を§Y$LEG$§!に変更します。"
  FOGTITLE:0 "政体を変更します。"
  SENDMISSION:0 "クリックして宣教師を派遣します。"
@@ -1087,8 +1087,8 @@
  ASKSUPPORTINDEPENDENCE:0 "国が我々の支援の要求を受け入れた場合、我々が独立を宣言すると彼らは我々を支援して参戦します。"
  ALLIANCETITLE:0 "同盟を申し出る"
  CANCELALIANCETITLE:0 "同盟を破棄する"
- ALLIANCENEWDESC:0 "$COUNTRY$に同盟を提案しますか？そうすることで、我々は戦争の際にはお互いを助けることを義務付けられます。"
- BREAKALLIANCENEWDESC:0 "$COUNTRY$との同盟を破棄しますか？これを行うと二国間に停戦期間が発生し、外交関係に悪影響を及ぼします。"
+ ALLIANCENEWDESC:0 "$COUNTRY$に同盟を提案しますか？戦争の際にはお互いを助けることを義務付けられます。"
+ BREAKALLIANCENEWDESC:0 "$COUNTRY$との同盟を破棄しますか？これにより両国は停戦状態となり、関係に悪影響を与えます。"
  ALLIANCEREQDESC:0 "$ACTOR$が我々に同盟締結を申し出ています。これを行うと戦争時に相互に支援の約束をすることになります。"
  SUCCWAR_TITLE2:0 "継承戦争実行可能"
  SUCC_OK:0 "戦争だ！"
@@ -1096,7 +1096,7 @@
  SUCCWAR_DESC2:0 "$WHO$の支配者は後継者を残さず死去しました。我々が異議を唱えない限り、彼らは$OVERLORD$との連合に加わるでしょう。我々が異議を唱える場合は、$WHO$との継承戦争が始まります。"
  OFFERALLIANCEDESC:0 "我々からの同盟の申し出を受け入れられた場合、戦争時に支援を受けられるかもしれません。"
  CANCELALLIANCEDESC:0 "同盟破棄はこの国との同盟が終わるのはもちろんのこと、外交関係に悪影響を及ぼします。"
- CANCELMARCHNEWDESC:0 "$COUNTRY$を再び通常の属国としてもよろしいですか？"
+ CANCELMARCHNEWDESC:0 "$COUNTRY$を通常の属国へと戻しますか？"
  DESIGNATEMARCHDESC:0 "$WHO$は辺境伯となります。"
  CANCELMARCHDESC:0 "$WHO$は再び通常の属国になります。あなたはコストとして§R-1§!の安定度を消費し、$WHO$との関係は深く傷つくでしょう。"
  CANCELMARCHNOSTABCOSTDESC:0 "$WHO$は再び通常の属国となります。これは$WHO$とあなたとの関係を深刻に傷つけるでしょう。"
@@ -1109,12 +1109,12 @@
  REVOKEEMBARGOTITLE:0 "禁輸を取り消す"
  REVOKEEMBARGONEWDESC:0 "$COUNTRY$に対する禁輸措置を取り消しますか？"
  VASSALTITLE:0 "属国化を提案する"
- VASSALNEWDESC:0 "$COUNTRY$に我々の属国となることを要請しますか？"
+ VASSALNEWDESC:0 "$COUNTRY$に我々の属国となるよう要請しますか？"
  PROTECTORATETITLE:0 "保護国を設立"
  ASK_PROTECTORATE:0 "保護国化の要請"
  ASK_PROTECTORATETITLE:0 "保護国化の要請"
- PROTECTORATENEWDESC:0 "$COUNTRY$に我々の保護国となることを要請しますか？"
- ASK_PROTECTORATEDESC:0 "我々が$COUNTRY$の保護国となることを要請しますか？"
+ PROTECTORATENEWDESC:0 "$COUNTRY$に我々の保護国となるよう要請しますか？"
+ ASK_PROTECTORATEDESC:0 "我々が$COUNTRY$の保護国となることを申し出ますか？"
  VASSALDESC:0 "我々の属国になるよう求めます。"
  PROTECTORATEDESC:0 "我々の保護国になるよう求めます。"
  PROTECTORATEWEDESC:0 "我々が彼らの保護国になるよう求めます。"
@@ -1156,34 +1156,34 @@
  WARNTITLE:0 "警告を送る"
  HASWARN:0 "我々はすでに警告を送っています。"
  MILACCTITLE:0 "軍事通行権を要請する"
- MILACCNEWDESC:0 "$COUNTRY$へ軍事通行権を要請しますか？これにより我々の軍隊が彼らの領土を通行することを可能にします。"
- MILACCDESC:0 "かの国の領土通行権を要求します。"
+ MILACCNEWDESC:0 "$COUNTRY$へ軍事通行権を要請しますか？これにより我が軍が彼らの領土を通行できるようにします。"
+ MILACCDESC:0 "彼らの領土の通行権を要求します。"
  MILACCREQDESC:0 "$COUNTRY$は我々に軍事通行権を要請しています。承諾することにより、彼らの軍隊が我々の領土内を進軍することが可能になります。"
  MILACCREQWARWITH:0 "彼らは$COUNTRYLIST|Y$と戦争中です。"
  CANCELMILACCDESC:0 "彼の国への軍事通行権を取り消します。"
  CANCELMILACCTITLE:0 "軍事通行権を取り消す"
  OFFERMILACCTITLE:0 "軍事通行権を提供する"
- OFFERMILACCNEWDESC:0 "$COUNTRY$に軍事通行権を提供しますか？これは彼らの軍隊が我々の領土に駐留するのを可能にします。"
- OFFERMILACCDESC:0 "彼らの軍隊が我々の領土に駐留するのを可能にします。"
+ OFFERMILACCNEWDESC:0 "$COUNTRY$に軍事通行権を提供しますか？これは彼らの軍隊が我々の領土に駐留できるようにします。"
+ OFFERMILACCDESC:0 "彼らの部隊が我が国に駐留できるようにします。"
  REVOKEMILACCTITLE:0 "軍事通行権を剥奪する"
- REVOKEMILACCNEWDESC:0 "$COUNTRY$へ提供している軍事通行権を剥奪しますか？これを行うことにより、彼らの軍隊が我々の領内を通行することを防ぎます。"
- REVOKEMILACCDESC:0 "彼らの軍隊が我々の領土内に駐留する権利を剥奪します。"
- NEGOTIATETITLE:0 "交渉を開始"
- NEGOTIATEDESC:0 "金銭、土地その他を取引するための交渉を始めます。"
- SENDGIFTNEWDESC:0 "$COUNTRY$に贈り物を送りますか？これは§Y$COST$§!¤のコストにより§Y$MONTHS$§!ヶ月間、関係が§G$OPINION$§!改善されます。"
+ REVOKEMILACCNEWDESC:0 "$COUNTRY$に与えている軍事通行権を剥奪しますか？これにより彼らの軍は我が国を通行できなくなります。"
+ REVOKEMILACCDESC:0 "彼らの部隊が我が国に駐留する権利を剥奪します。"
+ NEGOTIATETITLE:0 "交渉を始める"
+ NEGOTIATEDESC:0 "金銭や土地などを取引するための交渉を始めます。"
+ SENDGIFTNEWDESC:0 "$COUNTRY$に贈り物を送りますか？これには§Y$COST$§!¤のコストがかかり、§Y$MONTHS$§!ヶ月間、関係が§G$OPINION$§!改善されます。"
  SENDGIFTNOCASH:0 "必要な資金が不足しています。"
- SENDGIFTNOMINCASH:1 "贈り物は$MIN|Y$¤よりも小さくすることはできません。"
+ SENDGIFTNOMINCASH:1 "贈り物は$MIN|Y$¤未満にすることはできません。"
  INSULTTITLE:0 "侮辱する"
- INSULTDESC:0 "我々は彼らとの関係を大きく乱します。これは彼らに我々に対する開戦事由を与えるでしょう。"
+ INSULTDESC:0 "彼らとの関係を大きく乱します。これは彼らに我々に対する開戦事由を与えるでしょう。"
  CLAIMTITLE:0 "王位を請求する"
  NOCLAIMMARRIAGE:0 "王位の請求は、対象国と王室間の婚姻を結んでいる場合のみ可能です。"
- NOCLAIMALREADYCLAIMED:0 "我々はすでに、この王位を主張しています。"
+ NOCLAIMALREADYCLAIMED:0 "既にこの王位を主張しています。"
  RMDESCR:0 "王室間の婚姻は、両国の王族による婚姻を表します。それにより関係は大きく改善します。王室間の婚姻を結んでいる国に宣戦布告した場合、あなたの国は多大な損害を蒙ります。"
- THEY_CANT_GOV_RM:0 "彼らの政体は君主制ではないため王室間の婚姻はできません。"
- WE_CANT_GOV_RM:0 "我々の政体では王室間の婚姻をすることはできません。"
- NO_WAR_WHEN_REGENCY:0 "摂政評議会がある間は、我々は戦争を開始することはできません。"
- WARDESC:0 "国家との戦争中には、敵の土地に軍隊を移動できます。敵の州を征服するには、州を占領し、和平交渉で要求する必要があります。開戦事由なしで宣戦布告すると、安定度が大幅に低下します。"
- NO_WAR_ALLIED:0 "同盟を結んでいる国に宣戦布告することはできません。まず、同盟を破棄してください。"
+ THEY_CANT_GOV_RM:0 "彼らの政体が君主制ではないため、王室間の婚姻はできません。"
+ WE_CANT_GOV_RM:0 "我々の政体では王室間の婚姻はできません。"
+ NO_WAR_WHEN_REGENCY:0 "摂政評議会がある間は、戦争を開始することはできません。"
+ WARDESC:0 "国家との戦争中には、敵の領土に軍隊を移動できます。敵の州を征服するには、州を占領し、和平交渉で要求する必要があります。開戦事由なしで宣戦布告すると、安定度が大幅に低下します。"
+ NO_WAR_ALLIED:0 "同盟を結んでいる国に宣戦布告することはできません。まず同盟を破棄してください。"
  NO_WAR_TRADELEAGUE_BUDDIES:0 "あなたの貿易同盟内の国に宣戦布告することはできません。まず、貿易同盟を終了してください。"
  NO_WAR_ALLIED_OVERLORD:0 "宗主国があなたと同盟を結んでいる国に宣戦布告することはできません。まず、同盟を破棄してください。"
  NO_WAR_CHAOS:0 "国内が非常に混乱している間は宣戦布告できません。まず安定度を-3より改善してください。"
@@ -2218,7 +2218,7 @@
  HALFYEAR:0 "半年"
  YEARLY:0 "毎年"
  FIVE_YEAR:0 "5年間"
- OFFERLOANTITLE:0 "借金の提案"
+ OFFERLOANTITLE:0 "借款を提案する"
  OFFER_LOAN_DESCR:0 "資金を貸し出す提案をします。"
  OFFER_LOAN_HAS_WAR:0 "戦争中の国に金を貸すことはできません。"
  YEARS:0 "年"
@@ -2229,14 +2229,14 @@
  MONTHS:0 "ヶ月"
  SELLPROV_REQDESC:0 "$ACTOR$は我々に$PROV$州を合計§Y$PRICE$§!¤で売却することを提案しています。受け入れますか？"
  SELLSHIPS_REQDESC:0 "$ACTOR$は我々に$COMPOSITION$を含む$FLEETNAME$を合計§Y$PRICE$§!¤で売却することを提案しています。承諾しますか？"
- SELLPROVTITLE:0 "州の売却"
+ SELLPROVTITLE:0 "州を売る"
  SELLPROV_OFFDESC:0 "$RECIPIENT$に$PROV$を我々から合計§Y$PRICE$§!¤で購入する機会を提供します。"
  SELLSHIPS_OFFDESC:1 "$RECIPIENT$に$COMPOSITION$を含む$FLEETNAME$を我々から合計§Y$PRICE$§!¤で購入する機会を提供します。"
  SELL_PROV_OWN:0 "あなたが支配していない州を売却することはできません。"
  SELLSHIPS_ATWAR:0 "自国か相手が戦争中である間は、船を売却することはできません。"
  SELLSHIPS_RIVAL:0 "ライバルに艦隊を売却することはできません。"
  SELLSHIPS_ENEMY:0 "我が国をライバルに指定した国へ艦隊を売却することはできません。"
- SELLSHIPSTITLE:0 "艦船の売却"
+ SELLSHIPSTITLE:0 "船を売る"
  SELLSHIPS_NONE:0 "売却できる船を持っていません。"
  SELLSHIPS_NO_SELECTED:0 "売却する艦隊を選択"
  SELLSHIPS_NO_PORT:0 "$COUNTRY|Y$には港がありません。"
@@ -3355,7 +3355,7 @@
  LEDGER_MILITARY_STATISTICS:0 "軍事統計"
  LEDGER_TRUCE_L:0 "我々は次の国と停戦中です。これらの国への宣戦布告は、世界の他の国々から特に卑劣な行為とみなされます。さらに、国内の人々は統治者の言葉に信頼が置けないことへの懸念を膨らませます。"
  LEDGER_TRUCE_S:0 "停戦"
- CANCELMILACCNEWDESC:0 "$COUNTRY$から得ている軍事通行権を中止しますか？これにより我々の軍隊が彼らの国を通行するのを妨げることになります。"
+ CANCELMILACCNEWDESC:0 "$COUNTRY$から与えられている軍事通行権を取り消しますか？これにより我が軍は彼の国を通行できなくなります。"
  city:0 "都市"
  PROV_BASETAX_DESCR:0 "これは都市が十分に開発されたとき、この州が提供する税の基本値です。"
  NO_EFFECT:0 "影響なし"
@@ -3996,7 +3996,7 @@
  MOVE_CAPITAL_COST:0 "遷都にかかるコストは§Y$POWER$§!£adm£になります。"
  HRE_DISMANTLE:0 "神聖ローマ帝国を解体"
  YOUR_CAPITAL:0 "私たちの国の首都です。"
- CONFIRMMOVECAPITALTEXT:0 "この新たな場所に首都を移しますか？"
+ CONFIRMMOVECAPITALTEXT:0 "この新しい場所に遷都しますか？"
  CONFIRM_CAP_COST:0 "コスト：§Y$AMOUNT$§W£adm"
  OPTION_CHANGED:0 "$FROM$は$TO$に変更しました。"
  MERC_INF:0 "傭兵歩兵"
@@ -4587,7 +4587,7 @@
  COTDISCOVER:0 "この交易ノードを発見していません。"
  COT_TOOLTIP:0 "この交易ノードは§Y$CASH$§W¤の価値があります。"
  COTBUTTON:0 "その州の交易ノードは$NAME$です。それは$NATION$に属しています。"
- EMBARGONEWDESC:0 "$COUNTRY$に対する禁輸を発動し、できる限り交易商の力を弱めることを希望しますか？これは彼らを怒らせるでしょう。"
+ EMBARGONEWDESC:0 "$COUNTRY$に対する禁輸を発動し、彼らの交易商の力を減少させますか？これは彼らを怒らせるでしょう。"
  ISSUEEMBARGODESC:0 "禁輸を発動し、我々が力を持っているノードの彼らの交易商の力を減少させます。しかし、これは彼らが我々のライバルでない限り、我々の交易効率を低下させることにもなります。"
  CANCELEMBARGO:0 "禁輸を取り消し、彼らの交易商との競争を止めます。"
  COTEMBARGO:0 "この交易ノードの所有者は、この国に対する禁輸を行っています。"
@@ -4727,7 +4727,7 @@
  TOLERANCE_HEATHEN:0 "異教徒の信仰の寛容度"
  CARDINAL_NOT_READY:0 "枢機卿はごく最近、影響を受けています。我々は以下まで待たなければなりません："
  CALL_CRUSADETITLE:0 "十字軍の呼びかけ"
- CALL_CRUSADENEWDESC:0 "$COUNTRY$に対する十字軍を呼びかけますか？これは、異教徒との戦争中、カトリック諸国に重要な人的資源と収入のボーナスを与えるでしょう。"
+ CALL_CRUSADENEWDESC:0 "$COUNTRY$に対する十字軍を呼びかけますか？これは、異教徒との戦争中、カトリック諸国の人的資源と収入に大幅なボーナスを与えるでしょう。"
  CALL_CRUSADEDESC:0 "十字軍は彼らとの戦争の間、カトリックの国家に重要な人的資源と収入のボーナスを与えます。"
  HASCALL_CRUSADE:0 "我々はすでに彼らに対する十字軍を呼びかけています。"
  EXCOMMUNICATETITLE:0 "破門する"
@@ -6741,7 +6741,7 @@
  ARE_NOT_PRIMITIVES:0 "未開国ではない"
  ARE_PRIMITIVES:0 "未開国である"
  CONCEDE_DEFEAT:0 "$WHO$は敗北を認めるでしょう。"
- THE:0 " "
+ THE:0 ""
  nocasusbelli:0 "開戦事由なし"
  nocasusbelli_desc:0 "我々には彼らを攻撃する有効な理由がありません。"
  TOGGLE_COLONIAL_WAR:0 "植民地戦争の宣言"
@@ -6796,7 +6796,7 @@
  cb_heretic_desc:0 "異端者を火あぶりにしろ！"
  cb_border_war:0 "国境摩擦"
  cb_border_war_desc:0 "奴らは我々の国境に近い地域に関心を持っている。"
- cb_excommunication:0 "統治者の破門"
+ cb_excommunication:0 "支配者の破門"
  cb_excommunication_desc:0 "奴らの統治者は破門された。"
  cb_trade_war:0 "交易競争"
  cb_trade_war_desc:0 "奴らは交易を脅かしている！"
@@ -6936,8 +6936,8 @@
  MDEATH_INHERITED:0 "§Y$COUNTRY1$§Wは§Y$COUNTRY2$§Wによって継承されます"
  NOCLAIMDESC:0 "彼らに正式な後継者がいないか、後継者の請求権が弱くなくてはなりません。"
  NOCLAIMTOOMANY:0 "彼らの王位に対してすでに二人の請求権保持者がいます。"
- CLAIMDESC:1 "彼らの王位に対する請求権の主張は、彼らを同君連合の下位国にするための開戦事由を我々に与えます。この行為は我々が王室間の婚姻を持つすべての国との関係を悪化させます。"
- CLAIMNEWDESC:1 "$COUNTRY$の王位に対し請求権の主張を行いますか？この主張により、彼らを同君連合の下位国にするための開戦事由を得ます。この行為は我々が王室間の婚姻を持つすべての国との関係を悪化させます。"
+ CLAIMDESC:1 "彼らの王位に対する請求は、彼らを同君連合の下位国にするための開戦事由を我々に与えます。この行為は我々が王室間の婚姻を持つすべての国との関係を悪化させます。"
+ CLAIMNEWDESC:1 "$COUNTRY$の王位を請求しますか？この主張により、彼らを同君連合の下位国にするための開戦事由を得ます。この行為は我々が王室間の婚姻を持つすべての国との関係を悪化させます。"
  NOCLAIMPRESTIGE:0 "我々の威信が彼らよりも高くなくてはなりません。"
  NOFORMUNIONRELIGION:0 "§Y$RELIGION$§!の信仰は同君連合の形成を許可していません。"
  NOROYALMARRIAGERELIGION:0 "§Y$RELIGION$§!の信仰は他の宗教グループの国との王室間の婚姻を許可していません。"
@@ -7334,7 +7334,7 @@
  desc_sought_after_bachelor:0 "世界の宮廷は、我々の君主が結婚のための魅力的な相手であると考えている。"
  a_woman_scorned:0 "女は軽蔑する"
  desc_a_woman_scorned:0 "女性の軽蔑ほど恐ろしいものはない。女王はあなたについて全く満足しておらず、そして、奇妙な偶然の間に、あなたについての非常に奇妙で厄介な噂が外国の宮廷で流布し始めた。"
- GUARANTNEWDESC:0 "$COUNTRY$の保証を宣言しますか？我々は彼らを攻撃するすべての国との戦争に参戦します。"
+ GUARANTNEWDESC:0 "$COUNTRY$の保証を宣言しますか？我々は彼らを攻撃するいかなる国との戦争にも参戦します。"
  GUARANTDESC:0 "彼らの独立を保障すると、我々は彼らを攻撃するすべての国との戦争に参戦します。"
  WARNNEWDESC:0 "$COUNTRY$に警告を送りますか？彼らが我々の隣国の一つを攻撃した場合、我々は彼らとの戦争に参戦します。"
  WARNDESC:0 "彼らに警告を送ると、彼らが我々の隣国の一つを攻撃した場合、戦争に参加しなければなりません。"
@@ -7741,7 +7741,7 @@
  alert_fervor_delayed:0 "使用可能な情熱を$VAL$ポイント持っています。"
  HAVE_MORE_LOCAL_AUTONOMY_THAN:0 "自治率が右記より高い："
  HAVE_LESS_LOCAL_AUTONOMY_THAN:0 "自治率が右記より低い："
- CONFIRM_REASSIGN_LEADER_TITLE:0 "この指揮官を再度割り当てますか？"
+ CONFIRM_REASSIGN_LEADER_TITLE:0 "この指揮官を再割り当てしますか？"
  CONFIRM_REASSIGN_LEADER_DESC:0 "この指揮官を$PROVINCE|Y$で$FROM|Y$から$TO|Y$へ異動させます。"
  ND_LAYOUT:0 "背景"
  ND_MAP_COLOR:0 "MAPの色"
@@ -7999,8 +7999,8 @@
  tsardom_legacy_desc:0 "この国家は帝政ローマの遺産と正教会の支持者である。全ロシアのツァーリとして、我らが統治者は東スラヴ人民の真の支配者である。"
  principality_legacy:0 "公国"
  principality_legacy_desc:0 "この国家は、キエフの崩壊後数年間、そしてタタールの朝貢を求める遠征の絶え間ない侵入の圧力の下で進化した政府体制である。支配する一族は大きな権力を発揮することができるが、年功序列と皇位継承は長年の内部紛争へと繋がる可能性がある。"
- INSULTNEWDESC:1 "$COUNTRY|Y$に侮辱を送りますか？これは我々の関係を$MODIFIER|R$悪化させ、彼らに我々に対する開戦事由を与えるでしょう。"
- SCORNFULINSULTDESC:0 "$COUNTRY|Y$に軽蔑的侮辱を送りますか？これは我々の関係を$MODIFIER|R$悪化させ、彼らに我々に対する開戦事由を与えるでしょう。"
+ INSULTNEWDESC:1 "$COUNTRY|Y$を侮辱しますか？これは関係を$MODIFIER|R$悪化させ、彼らに我々に対する開戦事由を与えるでしょう。"
+ SCORNFULINSULTDESC:0 "$COUNTRY|Y$に軽蔑的侮辱を送りますか？これは関係を$MODIFIER|R$悪化させ、彼らに我々に対する開戦事由を与えるでしょう。"
  INSULTPOWERPROJECTIONGAIN:0 "我々は戦力投射を$VALUE|Y$得ます。"
  COL_CONST_TIP_SETTLEMENT_GROWTH:0 "植民者はここに§Y$DATE$§!に到着し、移民成長に従事します。"
  CHARTERCOMPANY_REQDESC:0 "$ACTOR$は我々に$PROV$州を合計§Y$PRICE$§!¤で購入することを提案しています。受け入れますか？"
@@ -8016,7 +8016,7 @@
  celestial_empire_legacy_desc:0 "天朝はその支配者を、天帝の意により国家を統治するために生まれた天子であると宣言する。"
  YOU_PLAY_AS_NEW_ESTATE_COUNTRY:0 "§Rあなたは開発度$DEV$の新しく形成された$RELIGION$国家でゲームを続けます！§!"
  YOU_PLAY_AS_NEW_COUNTRY:0 "§Rあなたは新しく形成された国家でゲームを続けます！§!"
- RELEASE_REFORMS:1 "彼らは何も改革が施行されていない状態から始めますが、現在の改革進捗を獲得し、これまでに費やされた改革進捗を全て取り戻します。"
+ RELEASE_REFORMS:1 "彼らは何も改革が制定されていない状態から始めますが、現在の改革進捗を獲得し、これまでに費やされた改革進捗を全て取り戻します。"
  WAS_NOT_TAG:0 "$TAG|Y$ではない"
  WAS_TAG:0 "$TAG|Y$であった"
  MANAGE_REBEL_SUPPRESSION:0 "§Y自動的な反乱軍鎮圧の管理§!"
