--- a/source/localisation/astu_1_31_l_english.yml
+++ b/source/localisation/astu_1_31_l_english.yml
@@ -14,20 +14,20 @@
  CENTRALIZE_STATE_CONSTRUCTION_1:0 "ステートの集権化を完了"
  CENTRALIZE_STATE_CONSTRUCTION_2:0 "$PROVINCE$での工事が完了しました。"
  CENTRALIZE_STATE_CONSTRUCTION_3:1 "今、$STATE|Y$はステート集権化されてます。"
- CENTRALIZE_STATE_CONSTRUCTION_LOG:0 "$PROVINCE$でのステート集権化工事が完了しました。"
+ CENTRALIZE_STATE_CONSTRUCTION_LOG:0 "$PROVINCE$でのステート集権化工事が完了"
  CENTRALIZE_STATE_CONSTRUCTION_BTN1:0 "OK"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_TITLE:0 "ステートの集権化の中止"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_SETUP:0 "領有者の変更やステートがテリトリーに変更されたことによって、ステートの集権化が中止された場合。"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_1:0 "ステートの集権化の中止"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_2:0 "$PROVINCE$での工事を中止しました。"
- CENTRALIZE_STATE_CONSTRUCTION_CANCEL_LOG:0 "$PROVINCE$でのステートの集権化工事を中止しました。"
+ CENTRALIZE_STATE_CONSTRUCTION_CANCEL_LOG:0 "$PROVINCE$でのステートの集権化工事を中止"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_BTN1:0 "OK"
  CENTRALIZE_STATE_CANCEL_TITLE:0 "ステートの集権化工事が解除されました"
  CENTRALIZE_STATE_CANCEL_SETUP:0 "領有者の変更によってステートの集権化工事が解除された場合"
  CENTRALIZE_STATE_CANCEL_1:0 "ステートの集権化工事が解除されました"
  CENTRALIZE_STATE_CANCEL_2:0 "$PROVINCE$での工事は解除されました。"
  CENTRALIZE_STATE_CANCEL_3:1 "そのステートの州をすべて領有していません。"
- CENTRALIZE_STATE_CANCEL_LOG:0 "$PROVINCE$でのステートの集権化は解除されました。"
+ CENTRALIZE_STATE_CANCEL_LOG:0 "$PROVINCE$でのステートの集権化が解除"
  CENTRALIZE_STATE_CANCEL_BTN1:0 "OK"
  CONFIRMABANDONSTATECENTRALIZED:0 "$STATE$はもはやステートの集権化はなされていません。"
  INFLACTION_REDUCTION:0 "インフレ削減補正：\n"
