--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -16,7 +16,7 @@
  MISSIONCANCELLED_4:0 "$ACTION$が中止されました。"
  MISSIONCANCELLED_5:0 "$REASON$"
  MISSIONCANCELLED_6:0 "彼らは$PROV$で更なる命令を待っています。"
- MISSIONCANCELLED_LOG:0 "$NAME$の任務が中止されました"
+ MISSIONCANCELLED_LOG:0 "$NAME$任務が中止された"
  MISSIONCANCELLED_BTN1:0 "OK"
  MISSIONCANCELLED_BTN2:0 "OK"
  MISSIONCANCELLED_BTN3:0 "移動"
@@ -33,7 +33,7 @@
  EStopMissionReason_NoLightShips:0 "この海軍には小型船はいません。"
  EStopMissionReason_Exploring:0 "このユニットは探索中です。"
  EStopMissionReason_MercenarysCantDrill:0 "傭兵ユニットを訓練することは出来ません。"
- EStopMissionReason_CondottieriCantDrill:0 "コンドッティエーリを訓練することは出来ません。"
+ EStopMissionReason_CondottieriCantDrill:0 "コンドッティエーリを訓練することはできません。"
  EStopMissionReason_NotOwner:0 "この軍隊はあなたが所有していない州にいます。"
  EStopMissionReason_AttachedToOtherUnit:0 "このユニットは他のユニットと結合しています。"
  EStopMissionReason_NotControllerOfProvince:0 "この軍隊はあなたが支配していない州にいます。"
@@ -295,7 +295,7 @@
  COUNTRY_HAS_BEEN_PILLAGED_3:0 "冷酷な者たちに収奪された"
  COUNTRY_HAS_BEEN_PILLAGED_4:0 "§Y$ACTUALTAKER$§!"
  COUNTRY_HAS_BEEN_PILLAGED_5:0 "They have carried off $DEV$ development."
- COUNTRY_HAS_BEEN_PILLAGED_LOG:0 "自国の首都は収奪を受けた。"
+ COUNTRY_HAS_BEEN_PILLAGED_LOG:0 "我らが首都、収奪される"
  COUNTRY_HAS_BEEN_PILLAGED_BTN1:0 "OK"
  COUNTRY_HAS_BEEN_PILLAGED_BTN2:0 "OK"
  COUNTRY_HAS_BEEN_PILLAGED_BTN3:0 "移動"
@@ -441,8 +441,8 @@
  RETURN_CORE_REQDESC:0 "$ACTOR$ is asking us to return their core province of $PROV$ in exchange for favors. Do you accept?"
  RETURN_CORE_OFFDESC:0 "You will request that $RECIPIENT$ return our core province $PROV$ as a favor to their ally. This will cost $FAVOURS$ Favours."
  RETURN_CORE_OWN:0 "They cannot return a province that they do not control."
- RETURN_CORETITLE:0 "中核州の返還"
- RETURN_CORE_FAVOR_DESC2:0 "Spend Favors to get them to return one of our core provinces."
+ RETURN_CORETITLE:0 "中核州を返還させる"
+ RETURN_CORE_FAVOR_DESC2:0 "好感度を使って、中核州の一つを返してもらいます。"
  reduced_opinion_favor:0 "Reduced opinion as a favor"
  refused_to_reduce_opinion_favor:0 "Refused to reduce opinion of another country"
  WE_REDUCED_OPINION_FAVOR_TITLE:0 "評価の減少"
@@ -667,8 +667,8 @@
  TRADE_FAVORS_FOR_SAILORS_DECLINED_BTN1:0 "Too bad"
  TRADE_FAVORS_FOR_SAILORS_DECLINED_BTN2:0 "Too bad"
  TRADE_FAVORS_FOR_SAILORS_DECLINED_BTN3:0 "移動"
- TRADE_FAVORS_FOR_SAILORS_CANNOT_NO_SAILORS:0 "$COUNTRY$ do not have $SAILORS|Y$ Sailors"
- TRADE_FAVORS_FOR_SAILORS_CANNOT_NO_SAILORS_AT_ALL:0 "$COUNTRY$ do not have any sailors"
+ TRADE_FAVORS_FOR_SAILORS_CANNOT_NO_SAILORS:0 "$COUNTRY$には$SAILORS|Y$人もの水兵がいません"
+ TRADE_FAVORS_FOR_SAILORS_CANNOT_NO_SAILORS_AT_ALL:0 "$COUNTRY$には水兵がいません。"
  TRADE_FAVORS_FOR_SAILORS_CANNOT_COST:0 "水兵を要求するには、§Y$COUNTRY$§!の好感度が§Y$COST$§!以上必要です。"
  TRADE_FAVORS_FOR_SAILORS_CANNOT_OPINION:0 "水兵を要求するには、§Y$COUNTRY$§!の評価が§Y$OPINION$§!以上必要です。"
  TRADE_FAVORS_FOR_SAILORS_DESC2:0 "$MONTHS$カ月分の水兵供給数（$SAILORS|Y$）と引き換えに$FAVOR|Y$の好感度を使います。"
@@ -725,11 +725,11 @@
  TRADE_FAVORS_FOR_HEIR_CANNOT_NON_MONARCHY:0 "§Y$COUNTRY$§!は君主制ではありません。"
  TRADE_FAVORS_FOR_HEIR_CANNOT_REGENCY:0 "§Y$COUNTRY$§!には現在、摂政評議会があります。"
  TRADE_FAVORS_FOR_HEIR_CANNOT_ALREADY_HAVE_ONE:0 "§Y$COUNTRY$§!には既に正当な後継者がいます。"
- TRADE_FAVORS_FOR_HEIR_CANNOT_COST:0 "You need at least §Y$COST$§! Favors with §Y$COUNTRY$§! to ask them to install our dynasty member as their heir."
- TRADE_FAVORS_FOR_HEIR_CANNOT_OPINION:0 "You need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to install our dynasty member as their heir."
- TRADE_FAVORS_FOR_HEIR_DESC2:0 "Spend $FAVOR|Y$ Favors in exchange for installing a member of our dynasty as their heir."
- TRADE_FAVORS_FOR_HEIR_DESC:1 "We will ask $RECIPIENT|Y$ to install a member of our ruling dynasty as their heir in exchange for $FAVORS|Y$ Favors. This will create a truce between the countries and cause $AE|R$ Aggressive Expansion in countries of the same religion."
- X_IS_SUBJECT_OF_Y:0 "$COUNTRY|Y$ is a subject of $OVERLORD|Y$."
+ TRADE_FAVORS_FOR_HEIR_CANNOT_COST:0 "我が王朝に連なる者を§Y$COUNTRY$§!の後継者に据えるには、好感度が§Y$COST$§!以上必要です。"
+ TRADE_FAVORS_FOR_HEIR_CANNOT_OPINION:0 "我が王朝に連なる者を§Y$COUNTRY$§!の後継者に据えるには、評価が§Y$OPINION$§!以上必要です。"
+ TRADE_FAVORS_FOR_HEIR_DESC2:0 "我が王朝に連なる者を彼らの後継者として据えるのと引き換えに$FAVOR|Y$の好感度を使います。"
+ TRADE_FAVORS_FOR_HEIR_DESC:1 "$RECIPIENT|Y$に、$FAVORS|Y$の好感度と引き換えに、我々の支配王朝に連なる者を彼らの後継者に据えることを要請します。これにより、両国で停戦が成立し、同宗教の国家に$AE|R$の侵略的拡大が生じます。"
+ X_IS_SUBJECT_OF_Y:0 "$COUNTRY|Y$は$OVERLORD|Y$の従属国である。"
  DIPLOMACYACTION_CATEGORY_favors:0 "好感度"
  WE_TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼を好感度と交換する"
  WE_TRADE_FAVORS_FOR_TRUST_SETUP:0 "When we ask a country to increase their trust in us as a Favor."
@@ -790,7 +790,7 @@
  WE_TRADE_FAVORS_FOR_WAR_PREP_2:0 "$MONARCHTITLE$、我々は$RECIPIENT$に対し、"
  WE_TRADE_FAVORS_FOR_WAR_PREP_3:0 "戦争の準備をするよう"
  WE_TRADE_FAVORS_FOR_WAR_PREP_4:0 "$FAVOR|Y$の好感度と引き換えに頼みました。"
- WE_TRADE_FAVORS_FOR_WAR_PREP_LOG:0 "我々は$RECIPIENT$に好感度によって戦争の準備を求めた。"
+ WE_TRADE_FAVORS_FOR_WAR_PREP_LOG:0 "$RECIPIENT$に好感度によって戦争の準備を求めた"
  WE_TRADE_FAVORS_FOR_WAR_PREP_BTN1:0 "OK"
  WE_TRADE_FAVORS_FOR_WAR_PREP_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_WAR_PREP_BTN3:0 "移動"
@@ -830,18 +830,18 @@
  TRADE_FAVORS_FOR_WAR_PREP_DECLINED_BTN1:0 "Too bad"
  TRADE_FAVORS_FOR_WAR_PREP_DECLINED_BTN2:0 "Too bad"
  TRADE_FAVORS_FOR_WAR_PREP_DECLINED_BTN3:0 "移動"
- TRADE_FAVORS_FOR_WAR_PREP_CANNOT_COST:0 "You need at least §Y$COST$§! Favors with §Y$COUNTRY$§! to ask them to prepare for War."
- TRADE_FAVORS_FOR_WAR_PREP_CANNOT_ALLIANCE:0 "You need an alliance with §Y$COUNTRY$§! to ask them to prepare for War."
- TRADE_FAVORS_FOR_WAR_PREP_CANNOT_ALREADY_PREPPING:0 "§Y$COUNTRY$§! are already preparing for War."
+ TRADE_FAVORS_FOR_WAR_PREP_CANNOT_COST:0 "戦争の準備を要請するには、§Y$COUNTRY$§!への好感度が§Y$COST$§!以上必要です。"
+ TRADE_FAVORS_FOR_WAR_PREP_CANNOT_ALLIANCE:0 "戦争の準備を要請するには、§Y$COUNTRY$§!と同盟している必要があります。"
+ TRADE_FAVORS_FOR_WAR_PREP_CANNOT_ALREADY_PREPPING:0 "§Y$COUNTRY$§!は既に戦争を準備しています。"
  TRADE_FAVORS_FOR_WAR_PREP_CANNOT_OPINION:0 "戦争の準備を要請するには、§Y$COUNTRY$§!への好感度が§Y$OPINION$§!以上必要です。"
- TRADE_FAVORS_FOR_WAR_PREP_DESC2:0 "Spend $FAVOR|Y$ Favorsto ask them to prepare for War."
- TRADE_FAVORS_FOR_WAR_PREP_DESC:0 "We will ask $RECIPIENT|Y$ to prepapre for War in exchange for $FAVOR|Y$ Favors."
- CALL_CHECKBOX_ALLY:0 "§RYou cannot declare a country you are allied with as a co-belligerent.§!"
- HAS_GREAT_PROJECT_OF_TYPE:0 "Has a $NAME|Y$"
- HAS_NOT_GREAT_PROJECT_OF_TYPE:0 "Does not have a $NAME|Y$"
+ TRADE_FAVORS_FOR_WAR_PREP_DESC2:0 "戦争の準備を要請するために好感度を$FAVOR|Y$費やします。"
+ TRADE_FAVORS_FOR_WAR_PREP_DESC:0 "$RECIPIENT|Y$に$FAVOR|Y$の好感度と引き換えに戦争の準備をするよう申し込みます。"
+ CALL_CHECKBOX_ALLY:0 "§R同盟中の国に対し共戦国として宣戦できません。§!"
+ HAS_GREAT_PROJECT_OF_TYPE:0 "$NAME|Y$を有している"
+ HAS_NOT_GREAT_PROJECT_OF_TYPE:0 "$NAME|Y$を有していない"
  HAS_A_GREAT_PROJECT:0 "§Y大事業§!がある"
  HAS_NOT_A_GREAT_PROJECT:0 "§Y大事業§!がない"
- AT_TIER:0 "at §YTier $TIER$§!"
+ AT_TIER:0 "§Yレベル$TIER$§!である"
  COT_DOWNGRADE_NOT_OWNER:0 "§RYou cannot downgrade the Center of Trade of a province you do not own!§!"
  CANNOT_CONVERT_TO_PRIMITIVE:0 "You cannot force a nation to become Primitive."
  ANCESTORS:0 "Ancestors"
